--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -32,13 +32,15 @@
   }
 
   .feature {
-    border-bottom: 1px solid #ddd;
-  	padding: 1em 0 2em;
+    h3 {
+      margin-top: 0;
+    }
+    border-top: 1px solid #ddd;
+  	padding: 2em 0;
     width: 100%;
 
-    &:last-child {
+    &:first-child {
       border: 0;
-      padding-bottom: 0;
     }
   }
 }
