set toolbar to fixed position

--- a/src/htdocs/css/_toolbar.scss
+++ b/src/htdocs/css/_toolbar.scss
@@ -1,7 +1,7 @@
 #toolbar {
   background: rgba(66, 66, 66, .9);
   left: 0;
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
