change nomenclature of id and tag values

--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -2,7 +2,7 @@
 @import '_mapPane.scss';
 @import '_navigation.scss';
 @import '_summaryPane.scss';
-@import '_toolbar.scss';
+@import '_header.scss';
 
 html, body {
   font: 16px 'Helvetica Neue', Helvetica, Arial, sans-serif;
