--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -1,5 +1,6 @@
 @import '_editPane.scss';
 @import '_header.scss';
+@import '_loadingModule.scss';
 @import '_mapPane.scss';
 @import '_navigation.scss';
 @import '_summaryPane.scss';
