--- a/src/htdocs/css/_loadingModule.scss
+++ b/src/htdocs/css/_loadingModule.scss
@@ -1,6 +1,4 @@
 #loading {
-  background-color: rgba(255, 255, 120, 1);
-  border-top: 1px solid #e7e875;
   bottom: 0;
   height: 40px;
   left: 0;
@@ -9,7 +7,8 @@
   z-index: 1000;
 
   p {
-    background-color: rgba(255, 255, 120, 1);
+    background-color: rgb(255, 255, 120);
+    border-top: 1px solid #eaea87;
     color: #333;
     font-size: 20px;
     line-height: 1;
@@ -18,6 +17,13 @@
     text-align: center;
     position: absolute;
     width: 100%;
+    z-index: 1001;
+
+    &.error {
+      background-color: rgb(255, 180, 180);
+      border-color: #dc8f8f;
+      z-index: 1002;
+    }
   }
 
   &.hide {
