--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -14,16 +14,23 @@ html, body {
 
 body {
   position: relative;
+  line-height: 1.6;
+}
+
+h1 {
+  font-size: 1.6rem;
+}
+h2 {
+  font-size: 1.4rem;
+}
+h3 {
+  font-size: 1.2rem;
 }
 
 .pane {
-  padding: 4em 1em 1em;
+  padding: 3.5em 1em 1em;
 
   &#map {
     padding: 0;
-  }
-
-  > h2 {
-    display: none;
   }
 }
