--- a/src/htdocs/css/_editPane.scss
+++ b/src/htdocs/css/_editPane.scss
@@ -2,10 +2,6 @@
   padding-bottom: 2em;
 
   form {
-    background: #f6f6f6;
-    border: 1px solid #dbdbdb;
-    padding: 1em;
-
     p {
       margin-bottom: .25em;
     }
@@ -22,4 +18,10 @@
     font-size: .9rem;
     padding: 5px;
   }
+}
+
+.earthquake {
+  background: #f6f6f6;
+  border: 1px solid #dbdbdb;
+  padding: 1em;
 }
