--- a/src/htdocs/css/_editPane.scss
+++ b/src/htdocs/css/_editPane.scss
@@ -2,26 +2,57 @@
   padding-bottom: 2em;
 
   form {
-    p {
-      margin-bottom: .25em;
-    }
-  }
+    width: 18rem;
 
-  h3 {
-    margin: 2em 0 .5em;
-  }
-  label h3 {
-    margin-top: 0;
+    h3 {
+      margin: 1.5em 0 .5em;
+    }
+    label h3 {
+      margin-top: 0;
+    }
+
+    p {
+      font-weight: 300;
+      margin: .75em 0 .25em ;
+    }
   }
 
   input {
     font-size: .9rem;
     padding: 5px;
+    width: 12em;
   }
-}
 
-.earthquake {
-  background: #f6f6f6;
-  border: 1px solid #dbdbdb;
-  padding: 1em;
+  time {
+    display: block;
+  }
+
+  .column {
+    margin: 1em;
+  }
+
+  .details {
+    width: 24rem;
+  }
+
+  .mainshock {
+    background: #f4f8ff;
+    border: 1px solid #d6dde8;
+    display: flex;
+    flex-wrap: wrap;
+
+    dd {
+      margin: 0 0 1em 0;
+    }
+
+    dt {
+      color: #333;
+      font-weight: 300;
+    }
+
+    h2 {
+      line-height: 1.3;
+      margin-top: 0;
+    }
+  }
 }
