--- a/src/htdocs/css/_editPane.scss
+++ b/src/htdocs/css/_editPane.scss
@@ -40,6 +40,12 @@
     padding: 0 1.2em;
   }
 
+  .details {
+    h2 {
+      font-size: 1.6rem;
+    }
+  }
+
   .find {
     h3 {
       margin-top: 0;
