hide zoom control on mobile

--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -13,6 +13,10 @@
   white-space: nowrap;
 }
 
+.leaflet-control-zoom.hide {
+  display: none;
+}
+
 /* Leaflet label mouseovers */
 .leaflet-label {
   background: rgba(255, 255, 255, .85);
