--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -27,6 +27,13 @@ h3 {
   font-size: 1.2rem;
 }
 
+.eventid {
+  display: block;
+  margin: .25em 0;
+  max-width: 100%;
+  max-height: 36px;
+}
+
 .pane {
   padding: 3.5em 1em 1em;
 
