--- a/src/htdocs/css/_editPane.scss
+++ b/src/htdocs/css/_editPane.scss
@@ -47,14 +47,9 @@
   }
 
   .find {
-    h3 {
-      margin-top: 0;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-    }
+    list-style: none;
+    margin: -1em 0 1em;
+    padding: 0;
   }
 
   .mainshock {
