--- a/src/htdocs/css/_loadingModule.scss
+++ b/src/htdocs/css/_loadingModule.scss
@@ -13,6 +13,7 @@
     font-size: 20px;
     line-height: 1;
     margin: 0;
+    min-height: 40px;
     padding: 10px 0;
     text-align: center;
     position: absolute;
