--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -19,6 +19,13 @@ body {
   line-height: 1.6;
 }
 
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 h1 {
   font-size: 1.7rem;
 }
