add back style for time

--- a/src/htdocs/css/_editPane.scss
+++ b/src/htdocs/css/_editPane.scss
@@ -30,6 +30,10 @@
     }
   }
 
+  time {
+    display: block;
+  }
+
   .column {
     border-left: 1px solid #d6dde8;
     margin: 1em 0 1em -1px;
