--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -1,4 +1,5 @@
-$breakpoint-tablet-width: 1024px;
+$breakpoint-phone-width: 735px;
+$breakpoint-tablet-width: 1023px;
 $font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $link-color: rgb(0, 0, 238);
 $link-color-active: rgb(238, 0, 0);
@@ -72,7 +73,7 @@ h4 {
 }
 
 @media only screen
-  and (max-width: 667px) {
+  and (max-width: $breakpoint-phone-width) {
     .content {
       padding: 1em .5em;
     }
