--- a/src/htdocs/css/_editPane.scss
+++ b/src/htdocs/css/_editPane.scss
@@ -85,9 +85,11 @@
     color: #c00;
     margin-top: 1rem;
   }
+}
 
-  @media only screen
-    and (max-width: 1023px) {
+@media only screen
+  and (max-width: $breakpoint-tablet-width) {
+  #edit {
     form {
       flex-wrap: nowrap;
       max-height: none;
