--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -73,6 +73,139 @@ h4 {
   }
 }
 
+/* Impact bubbles */
+
+.impact-bubbles {
+  display: flex;
+  margin: 1em 0;
+
+  > a {
+    background-color: #fff;
+    border-radius: 3px;
+    box-shadow: inset 0 0 1px rgba(0, 0, 0, .5);
+    display: block;
+    flex: 1;
+    letter-spacing: .03em;
+    line-height: 1em;
+    max-width: 25%;
+    overflow: hidden;
+    padding: 6px 0;
+    text-align: center;
+    text-decoration: none;
+    text-overflow: ellipsis;
+    text-shadow: 1px 1px 0 hsla(0, 0%, 100%, .3);
+
+    > abbr {
+      border-bottom: 1px dotted #222;
+      font-size: .6875em;
+    }
+
+    > strong {
+      font-size: .8125em;
+      white-space: nowrap;
+    }
+
+    &:hover {
+      background-image: linear-gradient(0deg, rgba(0, 0, 0, .1) 0, transparent);
+    }
+
+    + a {
+      margin-left: 5px;
+    }
+  }
+
+  > .tsunami {
+    height: 43px;
+    padding: 0;
+
+    > img {
+      height: 100%;
+      max-width: none;
+      width: 100%;
+    }
+  }
+}
+
+.intensity,
+.roman {
+  color: #333;
+  font-family: Tahoma, Verdana, Segoe, sans-serif;
+  text-transform: uppercase;
+}
+
+.pager-alertlevel-pending {
+  background-color: #fff;
+  color: #000;
+}
+
+.pager-alertlevel-green {
+  background-color: #00b04f !important;
+  color: #000 !important;
+}
+
+.pager-alertlevel-yellow {
+  background-color: #ff0 !important;
+  color: #000 !important;
+}
+
+.pager-alertlevel-orange {
+  background-color: #f90 !important;
+  color: #000 !important;
+}
+
+.pager-alertlevel-red {
+  background-color: red !important;
+  color: #000 !important;
+}
+
+a.mmiI {
+  background-color: #fff;
+  color: #000;
+}
+
+a.mmiII,
+a.mmiIII {
+  background-color: #acd8e9;
+  color: #000;
+}
+
+a.mmiIV {
+  background-color: #83d0da;
+  color: #000;
+}
+
+a.mmiV {
+  background-color: #7bc87f;
+  color: #000;
+}
+
+a.mmiVI {
+  background-color: #f9f518;
+  color: #000;
+}
+
+a.mmiVII {
+  background-color: #fac611;
+  color: #000;
+}
+
+a.mmiVIII {
+  background-color: #fa8a11;
+  color: #000;
+}
+
+a.mmiIX {
+  background-color: #f7100c;
+  color: #000;
+}
+
+a.mmiX,
+a.mmiXI,
+a.mmiXII {
+  background-color: #c80f0a;
+  color: #000;
+}
+
 @media only screen
   and (max-width: $breakpoint-phone-width) {
     .content {
