--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -85,16 +85,16 @@ h4 {
     border-radius: 3px;
     box-shadow: inset 0 0 1px rgba(0, 0, 0, .5);
     display: block;
-    flex: 1;
     letter-spacing: .03em;
     line-height: 1em;
-    max-width: 25%;
+    max-width: 8em;
     overflow: hidden;
     padding: 6px 0;
     text-align: center;
     text-decoration: none;
     text-overflow: ellipsis;
     text-shadow: 1px 1px 0 hsla(0, 0%, 100%, .3);
+    width: 25%;
 
     > abbr {
       border-bottom: 1px dotted #222;
