--- a/src/htdocs/css/_helpPane.scss
+++ b/src/htdocs/css/_helpPane.scss
@@ -1,13 +1,22 @@
 #help {
   ol > li {
+    font-size: 1.15rem;
     margin: 1em 0 1.5em 0;
+  }
+
+  p {
+    margin: .5em 0;
+  }
+  p,
+  ul > li {
+    font-size: 1rem;
   }
 
   .eventid {
     display: block;
     margin: .25em 0;
-    max-width: 100%;
     max-height: 36px;
+    max-width: 100%;
   }
 
   .find {
