--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -1,7 +1,12 @@
 #summary {
+  h2 + p {
+    margin: -.25rem 0 1.5rem;
+  }
+
   h3 {
     margin: 2em 0 .5em;
   }
+  
   table {
     border-collapse: collapse;
     margin: 0 0 1em;
