set min-height of flex parent for Safari

--- a/src/htdocs/css/_editPane.scss
+++ b/src/htdocs/css/_editPane.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-flow: column wrap;
     max-height: 40rem;
+    min-height: 36rem; /* 'hack' for Safari, which does not calculate flex parent height correctly */
 
     h3 {
       margin: 1.75rem 0 .5rem;
