rename hash / id values to match names of Classes

--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -1,4 +1,4 @@
-#summary {
+#summaryPane {
   h2 + p {
     margin: -.25rem 0 1.5rem;
   }
@@ -6,7 +6,7 @@
   h3 {
     margin: 2em 0 .5em;
   }
-  
+
   table {
     border-collapse: collapse;
     margin: 0 0 1em;
