rename Navitation, LoadingModule classes

--- a/src/htdocs/css/_navBar.scss
+++ b/src/htdocs/css/_navBar.scss
@@ -1,8 +1,4 @@
-section.hide {
-  display: none;
-}
-
-#navigation {
+#navBar {
   background-color: rgba(77,68,130,.9);
   display: flex;
   margin: 0;
