fix media queries: use new id values

--- a/src/htdocs/css/_editPane.scss
+++ b/src/htdocs/css/_editPane.scss
@@ -105,7 +105,7 @@
 
 @media only screen
   and (max-width: $breakpoint-tablet-width) {
-  #edit {
+  #editPane {
     form {
       flex-wrap: nowrap;
       max-height: none;
