--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -165,7 +165,7 @@
 
 @media only screen
 and (max-width: $breakpoint-phone-width) {
-  #summary {
+  #summaryPane {
     .star {
       display: inline-block;
       margin-left: 2px;
