reorganize css structure

--- a/src/htdocs/css/_navBar.scss
+++ b/src/htdocs/css/_navBar.scss
@@ -1,8 +1,13 @@
 #navBar {
   background-color: rgba(77,68,130,.9);
   display: flex;
+  left: 0;
   margin: 0;
   padding: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
 
   a {
     color: #fff;
