add github link

--- a/src/htdocs/css/_helpPane.scss
+++ b/src/htdocs/css/_helpPane.scss
@@ -24,4 +24,10 @@
     margin: -1em 0 1em;
     padding: 0;
   }
+
+  .github {
+    border-top: 1px solid #eee;
+    margin-top: 1.5em;
+    padding: 4px 0;
+  }
 }
