refactor: better separate concerns and optimize for adding plots, additional feature layers

--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -66,6 +66,41 @@ section.hide {
   background: #f5f8fd;
 }
 
+/* Earthquake details: map popups, mainshock on edit, summary panes */
+.earthquake {
+  dd,
+  dt {
+    line-height: 1.7;
+  }
+  dd {
+    margin-left: 5em;
+  }
+  dt {
+    clear: left;
+    color: #333;
+    display: block;
+    float: left;
+    font-weight: 300;
+    width: 5em;
+  }
+
+  h4 {
+    margin: 0;
+
+    > a {
+      color: $link-color;
+    }
+  }
+
+  time {
+    display: block;
+  }
+
+  .star {
+    display: none;
+  }
+}
+
 .lighter {
   background: #fff;
 }
