--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -9,6 +9,7 @@ $link-color-active: rgb(204, 0, 0);
 @import '_impactBubbles.scss';
 @import '_mapPane.scss';
 @import '_navBar.scss';
+@import '_plotPane.scss';
 @import '_statusBar.scss';
 @import '_summaryPane.scss';
 
