--- a/src/htdocs/css/_editPane.scss
+++ b/src/htdocs/css/_editPane.scss
@@ -1,4 +1,35 @@
 #editPane {
+  button {
+    -webkit-appearance: button;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.4;
+    margin-top: 2em;
+    padding: 6px 12px;
+    text-align: center;
+    user-select: none;
+    vertical-align: middle;
+    white-space: nowrap;
+
+    &:active {
+      box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+      outline: 0;
+    }
+    &:focus {
+      outline: 0;
+    }
+    
+    &[disabled] {
+      box-shadow: none;
+      cursor: not-allowed;
+      opacity: .5;
+    }
+  }
+
   form {
     display: flex;
     flex-flow: column wrap;
@@ -59,21 +90,32 @@
   }
 
   .reset {
-    appearance: none;
-    background: none;
-    border: none;
-    color: $link-color;
-    cursor: pointer;
-    display: inline-block;
-    font: 16px $font-family;
-    margin-top: 1.5rem;
-    outline: 0;
-    text-align: left;
-    text-decoration: underline;
-    width: auto;
+    background-color: #efefef;
+    border-color: #ccc;
+    color: #333;
 
-    &:active {
-      color: $link-color-active;
+    &:active,
+    &:hover {
+      background-color: #e6e6e6;
+      border-color: #adadad;
+    }
+    &:focus {
+      border-color: #8c8c8c;
+    }
+  }
+
+  .viewmap {
+    background-color: #5cb85c;
+    border-color: #4cae4c;
+    color: #fff;
+
+    &:active,
+    &:hover {
+      background: #449d44;
+      border-color: #398439;
+    }
+    &:focus {
+      border-color: #255625;
     }
   }
 
