tweak wording / display of feature descriptions

--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -54,6 +54,12 @@ h4 {
   font-weight: normal;
 }
 
+p.description {
+  > strong {
+    font-weight: 500;
+  }
+}
+
 section.hide {
   display: none;
 }
