--- a/src/htdocs/css/_editPane.scss
+++ b/src/htdocs/css/_editPane.scss
@@ -22,7 +22,7 @@
     &:focus {
       outline: 0;
     }
-    
+
     &[disabled] {
       box-shadow: none;
       cursor: not-allowed;
@@ -33,8 +33,8 @@
   form {
     display: flex;
     flex-flow: column wrap;
-    max-height: 49rem;
-    min-height: 45rem; /* 'hack' for Safari, which does not calculate flex parent height correctly */
+    max-height: 50rem;
+    min-height: 46rem; /* 'hack' for Safari, which does not calculate flex parent height correctly */
 
     h3 {
       margin: 1.75rem 0 .5rem;
@@ -105,17 +105,17 @@
   }
 
   .viewmap {
-    background-color: #5cb85c;
-    border-color: #4cae4c;
+    background-color: #337ab7;
+    border-color: #2e6da4;
     color: #fff;
 
     &:active,
     &:hover {
-      background: #449d44;
-      border-color: #398439;
+      background: #286090;
+      border-color: #204d74;
     }
     &:focus {
-      border-color: #255625;
+      border-color: #122b40;
     }
   }
 
