incr contrast on selected tab

--- a/src/htdocs/css/_navBar.scss
+++ b/src/htdocs/css/_navBar.scss
@@ -17,7 +17,7 @@
     text-decoration: none;
 
     &.selected {
-      background-color: #b0a7f3;
+      background-color: #a196f1;
     }
   }
   li {
