--- a/src/htdocs/css/_impactBubbles.scss
+++ b/src/htdocs/css/_impactBubbles.scss
@@ -30,7 +30,7 @@ $hover: linear-gradient(0deg, rgba(0, 0, 0, .1) 0, transparent);
       white-space: nowrap;
     }
 
-    &:active {
+    &:active, &:visited {
       color: #000;
     }
     &:hover {
