--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -1,4 +1,3 @@
-@import 'leaflet.label.css';
 @import '_MousePosition.scss';
 
 #mapPane,
@@ -14,27 +13,9 @@
   white-space: nowrap;
 }
 
+/* hide zoom controls on mobile device (which has pinch-to-zoom gestures) */
 .leaflet-control-zoom.hide {
   display: none;
-}
-
-/* Leaflet label mouseovers */
-.leaflet-label {
-  background: rgba(255, 255, 255, .85);
-  border-color: rgba(0, 0, 0, .25);
-  border-width: 2px;
-  color: #000;
-  font-weight: 500;
-  padding: 2px 6px;
-
-  &:before {
-    left: -8px;
-    top: 6px;
-  }
-  &:after {
-    right: -8px;
-    top: 6px;
-  }
 }
 
 /* UtfGrid mouseovers */
@@ -54,12 +35,6 @@
   position: absolute;
   top: 0;
   white-space: nowrap;
-}
-
-/* ensure popups are on top of labels */
-.leaflet-popup {
-  font-size: 1.1em;
-  z-index: 1000;
 }
 
 /* push top controls down to accommodate toolbar */
