--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -20,21 +20,24 @@
 
 /* UtfGrid mouseovers */
 .leaflet-mouseover-tooltip {
-  background: #fff;
-  background: rgba(255, 255, 255, .85);
-  border: 2px solid;
-  border-color: rgba(0, 0, 0, .25);
-  border-radius: 4px;
-  color: #000;
+  background: rgba(255, 255, 255, .90);
+  border: 1px solid #fff;
+  border-radius: 3px;
+  box-shadow: 0 1px 3px rgba(0,0,0,.4);
+  color: #222;
   display: none;
-  font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
-  font-weight: 500;
   left: 12px;
-  margin: -.5em 0 0;
-  padding: 2px 6px;
+  padding: 6px;
+  pointer-events: none;
   position: absolute;
-  top: 0;
+  top: -6px;
+  user-select: none;
   white-space: nowrap;
+}
+
+/* make font-size a bit bigger for all map mouseovers */
+.leaflet-mouseover-tooltip, .leaflet-tooltip {
+  font-size: 1.1em;
 }
 
 /* push top controls down to accommodate toolbar */
