change view map button color to green

--- a/src/htdocs/css/_editPane.scss
+++ b/src/htdocs/css/_editPane.scss
@@ -105,17 +105,17 @@
   }
 
   .viewmap {
-    background-color: #337ab7;
-    border-color: #2e6da4;
+    background-color: #5cb85c;
+    border-color: #4cae4c;
     color: #fff;
 
     &:active,
     &:hover {
-      background: #286090;
-      border-color: #204d74;
+      background-color: #449d44;
+      border-color: #398439;
     }
     &:focus {
-      border-color: #122b40;
+      border-color: #255625;
     }
   }
 
