--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -16,6 +16,11 @@
   z-index: 423;
 }
 
+/* Match popup font-size to rest of app */
+.leaflet-container {
+  font-size: $font-size;
+}
+
 /* Quell long attributions */
 .leaflet-control-attribution {
   max-width: 300px;
@@ -24,7 +29,7 @@
   white-space: nowrap;
 }
 
-/* hide zoom controls on mobile device (which has pinch-to-zoom gestures) */
+/* Hide zoom controls on mobile device (which has pinch-to-zoom gestures) */
 .leaflet-control-zoom.hide {
   display: none;
 }
@@ -46,12 +51,12 @@
   white-space: nowrap;
 }
 
-/* make font-size a bit bigger for all map mouseovers */
+/* Make font-size a bit smaller for all map mouseovers */
 .leaflet-mouseover-tooltip, .leaflet-tooltip {
-  font-size: 1.1em;
+  font-size: .9em;
 }
 
-/* push top controls down to accommodate toolbar */
+/* Push top controls down to accommodate toolbar */
 .leaflet-top .leaflet-control {
   margin-top: 55px;
 }
