--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -1,6 +1,7 @@
 $breakpoint-phone-width: 735px;
 $breakpoint-tablet-width: 1023px;
 $font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$font-size: 16px;
 $link-color: rgb(78, 78, 202);
 $link-color-active: rgb(204, 0, 0);
 $link-color-visited: rgb(140, 78, 202);
@@ -15,7 +16,7 @@ $link-color-visited: rgb(140, 78, 202);
 @import '_summaryPane.scss';
 
 html, body {
-  font: 16px $font-family;
+  font: $font-size $font-family;
   height: 100%;
   margin: 0;
   padding: 0;
