--- a/src/htdocs/css/_navBar.scss
+++ b/src/htdocs/css/_navBar.scss
@@ -1,5 +1,5 @@
 #navBar {
-  background-color: rgba(77,68,130,.9);
+  background-color: rgba(77, 68, 130, .9);
   display: flex;
   left: 0;
   margin: 0;
