--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -39,7 +39,7 @@
   background: rgba(255, 255, 255, .90);
   border: 1px solid #fff;
   border-radius: 3px;
-  box-shadow: 0 1px 3px rgba(0,0,0,.4);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, .4);
   color: #222;
   display: none;
   left: 12px;
