add shakemap stations layer

--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -15,6 +15,9 @@
 .leaflet-mainshock-pane {
   z-index: 423;
 }
+.leaflet-stations-pane {
+  z-index: 420;
+}
 
 /* Match popup font-size to rest of app */
 .leaflet-container {
