--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -170,6 +170,11 @@
 
     h4 {
       margin-top: 0;
+      text-align: center;
+    }
+
+    .earthquake h4 {
+      text-align: left;
     }
   }
 }
