add Moment Tensor to map

--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -6,6 +6,10 @@
   height: 100%;
 }
 
+#mapPane > canvas {
+  display: none;
+}
+
 /* Rendering order of features (placed within overlayPane which has a z-index of 400) */
 .leaflet-aftershocks-pane {
   z-index: 422;
