use same border color for stations as other features

--- a/src/htdocs/css/features/_stations.scss
+++ b/src/htdocs/css/features/_stations.scss
@@ -158,7 +158,7 @@
 
   &:after {
     border: 12px solid transparent;
-    border-bottom-color: #666;
+    border-bottom-color: rgba(0, 0, 0, 0.6);
     border-left-width: 8px;
     border-right-width: 8px;
     content: ' ';
