hide fm, mt module(s) when they do not exist

--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -162,6 +162,10 @@
     > div {
       margin-right: 3em;
 
+      &.hide {
+        display: none;
+      }
+
       &:last-child {
         border: 0;
       }
