--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -10,24 +10,28 @@
   display: none;
 }
 
-/* Rendering order of features (placed within overlayPane which has a z-index of 400) */
-.leaflet-aftershocks-pane {
-  z-index: 422;
-}
+/* Rendering order of features
+  (most are rendered in leaflet-overlay-pane which has a z-index of 400) */
 .leaflet-focal-mechanism-pane {
   z-index: 425;
-}
-.leaflet-historical-pane {
-  z-index: 421;
-}
-.leaflet-mainshock-pane {
-  z-index: 423;
 }
 .leaflet-moment-tensor-pane {
   z-index: 424;
 }
+.leaflet-mainshock-pane {
+  z-index: 423;
+}
+.leaflet-aftershocks-pane {
+  z-index: 422;
+}
+.leaflet-historical-pane {
+  z-index: 421;
+}
 .leaflet-stations-pane {
   z-index: 420;
+}
+.leaflet-faults-pane {
+  z-index: 419;
 }
 
 /* Match popup font-size to rest of app */
